# defWorld

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bundle.sh  compile.sh
src/: main.cpp
src/engine/base/: game.cpp  game.hpp  system_scheduler.cpp  system_scheduler.hpp
src/engine/ecs/: component.hpp  entity.hpp  system.hpp  world.cpp  world.hpp
src/engine/events/: key_up.hpp  mouse_up.hpp  mouse_wheel_move.hpp
src/engine/log/: logger.cpp  logger.hpp
src/engine/render/: drawable.hpp  texture_provider.cpp  texture_provider.hpp  window.cpp  window.hpp
src/engine/render/drawable_primitives/: drawable_collection.cpp  drawable_collection.hpp  sprite.cpp  sprite.hpp
src/engine/util/: entity_builder.cpp  entity_builder.hpp  misc.cpp  misc.hpp
src/events/: event.hpp  key_down.hpp  key_up.hpp  mouse_down.hpp  mouse_move.hpp  mouse_up.hpp  mouse_wheel_move.hpp
src/game/components/: emit_particles_component.hpp  follow_cursor_component.hpp  particle_component.hpp  position_component.hpp  sprite_component.hpp
src/game/systems/: drawable_position_system.cpp  drawable_position_system.hpp  emit_particles_system.cpp  emit_particles_system.hpp  input_system.cpp  input_system.hpp  particle_system.cpp  particle_system.hpp  render_system.cpp  render_system.hpp
src/render/: drawable.hpp  window.cpp  window.hpp
src/render/drawable_primitives/: drawable_collection.cpp  drawable_collection.hpp  text.cpp  text.hpp
tests/: sanity-test.cpp  test-main.cpp
tests/engine/: ecs-world-benchmark.cpp  ecs-world-test.cpp
